# theskillbay

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  TASKS.md  VISION.md
.github/workflows/: ci.yml
benches/: crypto_bench.rs  storage_bench.rs
docs/: data-model.md  policy.md  protocol.md
examples/: example_skill.md  full_flow.md
schemas/: manifest.json
src/: cli.rs  crypto.rs  dedupe.rs  discovery.rs  execution.rs  git.rs  lib.rs  main.rs  models.rs  p2p.rs  policy.rs  storage.rs  web.rs
tests/: integration_tests.rs
