[package]
name = "theskillbay"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18"
ring = "0.17"
sled = "0.34"
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"
base64 = "0.21"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.0"